# ai_travel_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  REFERENCES.md  initiate.txt  locksummary.txt  pyproject.toml  requirements.txt  runevals.txt
eval/: geo_coherence_configs.json  itinerary_rubric.md  itinerary_scores.json  preference_test_set.json  run_eval.py
eval/results/: SUMMARY.md
scripts/: check_apis.py
src/: config.py  db.py
src/clustering/: geo_clusters.py
src/generation/: extractor.py  itinerary.py  prompts.py
src/ingestion/: nominatim.py  overpass.py
src/matching/: embeddings.py  scoring.py
src/routing/: ors.py
src/ui/: app.py  feedback.py  forms.py  itinerary_view.py  map_view.py
src/validation/: checks.py
